Remove Slack + Fix tier ranking bug not showing all coaches

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -138,6 +138,11 @@ body > .container {
   width: 5vh;
 }
 
+.footer-img {
+  width: 3rem;
+  padding: 0 0.5rem;
+}
+
 .listbox {
   width: 100%;
   margin: 0;
